--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,16 @@
                   placeholder="List key responsibilities"
                 ></textarea>
             </div>
+            <div class="form-group">
+                <label for="benefits">Benefits</label>
+                <textarea
+                  class="form-control"
+                  id="benefits"
+                  name="benefits"
+                  rows="3"
+                  placeholder="List benefits and perks"
+                ></textarea>
+            </div>
             <button type="submit" class="btn btn-primary btn-block">Generate</button>
         </form>
         <div id="loader" class="text-center mt-3" style="display: none;">
