--- a/templates/pdf_template.html
+++ b/templates/pdf_template.html
@@ -8,6 +8,9 @@
             font-family: Arial, sans-serif;
             margin: 30px;
         }
+        h1, h2, h3 {
+            text-align: center;
+        }
         pre {
             white-space: pre-wrap;
             font-size: 14px;
@@ -15,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1 style="text-align: center;">Job Description</h1>
+    <h1>Job Description</h1>
     <pre>{{ job_description }}</pre>
 </body>
 </html>
